--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boda-premium-itzel-carlos",
+  "name": "boda-premium-godofredo-maribel",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -57,6 +57,7 @@
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "sharp": "^0.34.3",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
